Navigation header issue where it would not shrink on small screens  fixed. Needed to be more specific with the media query to make it override materialize's own css

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -236,37 +236,11 @@ ALL OF THE REGISTRATION PAGE NEEDS TO BE FIXED
 /* Index page - 320px x 480px /*
 */
 
-@media only screen and (min-width: 320px) and (max-width: 480px)  {
-
-a.brand-logo {
-   left: 40%;
-}
-
-#welcomecardheader {
-  padding: 0px;
-}
-
-div#welcomecardheader {
-  font-size: 13px;
-}
-
-nav .brand-logo {
-  position: relative;
-  color: #fff;
-  display: inline-block;
-}
-h5 {
-  font-size: 1.3rem;
-  line-height: 100%;
-  margin: 1.0933333333rem 0 0.656rem -10rem;
-}
-}
-
-
-@media only screen and (min-width: 480px) and (max-width: 768px)  {
-h5 {
-  font-size: 1.3rem;
-  line-height: 100%;
-  margin: 1.0933333333rem 0 0.656rem -10rem;
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  nav a.brand-logo {
+    position: relative;
+    font-size: 1.2rem;
+    padding-right: 40px;
+  margin: 0;
 }
 }
